--- a/LANGUAGES/POLISH/language.ini
+++ b/LANGUAGES/POLISH/language.ini
@@ -4,221 +4,220 @@ DESCRIPTION = DEFAULT POLISH
 
 # VIDEO - ADJUST
 VIDEOADJUST_POSITION    = W lewo (-X) / w prawo (+X) / Do gory (-Y) / W dul (+Y) zeby ustawic ekran
-VIDEOADJUST_SCALEINFO   = Skalowanie wideo X: %i Y: %i
-VIDEOADJUST_EXITINFO    = Nacisnąć trojkat aby zakończ
-VIDEOADJUST_DEFAULTS    = Naciśnij przycisk Kółko, aby wartości domyślne
+VIDEOADJUST_SCALEINFO   = Skala-Video X: %i Y: %i
+VIDEOADJUST_EXITINFO    = Nacisnij trojkat aby wyjsc
+VIDEOADJUST_DEFAULTS    = Nacisnij kolko zeby byly orginalne opcje
 
 # SELECT - GAME FOLDER
-GAMEFOLDER_WANTUSE      = Chcesz uzyc
-GAMEFOLDER_TOINSTALLNTR = zeby zainstalowac gre?
-GAMEFOLDER_USING        = Uzyc
-GAMEFOLDER_TOINSTALL    = zeby zainstalowac gre?
+GAMEFOLDER_WANTUSE      = Chcesz użyć
+GAMEFOLDER_TOINSTALLNTR = Aby zainstalować grę?
+GAMEFOLDER_USING        = Używać
+GAMEFOLDER_TOINSTALL    = Aby zainstalować grę
     
 # DRAW SCREEN1
-DRAWSCREEN_FAVSWAP      = Ulubione Zmiana
-DRAWSCREEN_FAVINSERT    = Ulubione Ustaw
+DRAWSCREEN_FAVSWAP      = Zmien Ulubione
+DRAWSCREEN_FAVINSERT    = Włożyć Ulubione
 DRAWSCREEN_FAVORITES    = Ulubione
-DRAWSCREEN_PAGE         = Strone
+DRAWSCREEN_PAGE         = Strona
 DRAWSCREEN_GAMES        = Gry
-DRAWSCREEN_PLAY         = Graj
-DRAWSCREEN_SOPTIONS     = SELECT: Opcje Gry
-DRAWSCREEN_SDELETE      = SELECT: Wymaz Najlepsze
-DRAWSCREEN_STGLOPT      = START: Globalne Opcje
-DRAWSCREEN_EXITXMB      = Wyjdz do XMB?
-DRAWSCREEN_CANRUNFAV    = Nie moge wgrac tego ulubionego
-DRAWSCREEN_MARKNOTEXEC  = Zaznaczone ze nie mozna wykonac. Proba instalacji do HDD0 cache
-DRAWSCREEN_MARKNOTEX4G  = Zaznaczone ze nie mozna wykonac - Ma pliki polamane >= 4GB
-DRAWSCREEN_GAMEINOFMNT  = Nie ma folderu zeby zamontowac /dev_hdd0/game z USB
-DRAWSCREEN_GAMEIASKDIR  = Chcesz stworzyc /dev_usb00
-DRAWSCREEN_GAMEICANTFD  = Nie moge znalesc urzadzenia USB do zamontowania /dev_hdd0/game z USB
-DRAWSCREEN_GAMEIWLAUNCH = Czy chcesz wlaczyc Gre?
-DRAWSCREEN_EXTEXENOTFND = external executable not found
-DRAWSCREEN_EXTEXENOTCPY = Uzyj 'Kopji EBOOT.BIN z USB' do importowania.
-DRAWSCREEN_REQBR        = Required BR-Disc@ Retry?
+DRAWSCREEN_PLAY         = Praj
+DRAWSCREEN_SOPTIONS     = WYBIERZ OPCJĘ: Opcje gry
+DRAWSCREEN_SDELETE      = SELECT: Delete Favourite
+DRAWSCREEN_STGLOPT      = WYBIERZ OPCJĘ: Usuń Ulubione
+DRAWSCREEN_EXITXMB      = Wyjdź do XMB?
+DRAWSCREEN_CANRUNFAV    = Nie można wykonać tego elementu ulubionych
+DRAWSCREEN_MARKNOTEXEC  = Nie Oznaczone jako wykonywalne. Próby instalacji na HDD0 pamięci podręcznej
+DRAWSCREEN_MARKNOTEX4G  = Nie oznaczone jako wykonywalne - zawiera podzielone pliki  >= 4 GB
+DRAWSCREEN_GAMEINOFMNT  = Nie mogę znaleźć jednego folderu do montażu /dev_hdd0/game z dysku USB
+DRAWSCREEN_GAMEIASKDIR  = Chcesz stworzyć w /dev_usb00
+DRAWSCREEN_GAMEICANTFD  = Nie mogę znaleźć urządzenie USB do montażu /dev_hdd0/game z USB
+DRAWSCREEN_GAMEIWLAUNCH = Chcesz uruchomić gry?
+DRAWSCREEN_EXTEXENOTFND = Nie znaleziono pliku wykonywalnego zewnętrznie
+DRAWSCREEN_EXTEXENOTCPY = Opcja 'Kopiuj EBOOT.BIN z USB", aby zaimportować je.
+DRAWSCREEN_REQBR        = Wymagany BR-Disc@ Ponowić próbę?
 
 # DRAW OPTIONS
 DRAWGMOPT_OPTS          = Opcje
-DRAWGMOPT_CFGGAME       = Konfiguracja Gry
-DRAWGMOPT_CPYGAME       = Kopjuj Gre
-DRAWGMOPT_DELGAME       = Wymaz Gre
-DRAWGMOPT_FIXGAME       = Napraw dojscie/polwolenia plikow
-DRAWGMOPT_TSTGAME       = Sprawdz Gre
-DRAWGMOPT_CPYEBOOTGAME  = Kopjoj EBOOT.BIN z USB
-DRAWGMOPT_CPYTOFAV      = Kopjoj do Ulubionych
-DRAWGMOPT_DELFMFAV      = Wymarz z Ulubionych
+DRAWGMOPT_CFGGAME       = Config. Gry
+DRAWGMOPT_CPYGAME       = Kopia gry
+DRAWGMOPT_DELGAME       = Usunąć gry
+DRAWGMOPT_FIXGAME       = Ustalenie uprawnień do pliku
+DRAWGMOPT_TSTGAME       = Test gry
+DRAWGMOPT_CPYEBOOTGAME  = Kopiowanie EBOOT.BIN z urządzenia USB
+DRAWGMOPT_CPYTOFAV      = Kopiuj do folderu Ulubione
+DRAWGMOPT_DELFMFAV      = Usun z folderu Ulubione
 
-DRAWGMOPT_FIXCOMPLETE   = Naprawa dojscia do plikow zrobiona!
-DRAWGMOPT_CPYOK         = Kopiowanie skonczone z sukcesem
-DRAWGMOPT_CPYERR        = Blad w kopiowaniu
+DRAWGMOPT_FIXCOMPLETE   = Ustalienie uprawnienien skonczone
+DRAWGMOPT_CPYOK         = Skopiowane z Sukcesem
+DRAWGMOPT_CPYERR        = Wystąpił błąd podczas kopiowania
 DRAWGMOPT_CPYNOTFND     = Nie znalezione
 
 # DRAW CONFIGS
-DRAWGMCFG_CFGS          = Konfiguracja Gry
-DRAWGMCFG_DSK           = Potrzebny jest Dysk
+DRAWGMCFG_CFGS          = Config. Gry
+DRAWGMCFG_DSK           = Wymaga dysk
 DRAWGMCFG_NO            = Nie
 DRAWGMCFG_YES           = Tak
-DRAWGMCFG_UPD           = Aktualizacja na Internecie
-DRAWGMCFG_ON            = Wlaczone
-DRAWGMCFG_OFF           = Wylaczone
-DRAWGMCFG_EXTBOOT       = Zewnetrzny EBOOT.BIN
-DRAWGMCFG_BDEMU         = BD Emulacja
-DRAWGMCFG_EXTHDD0GAME   = Zewneczny /dev_hdd0/game
-DRAWGMCFG_SAVECFG       = Zapisz konfiguracje
+DRAWGMCFG_UPD           = Aktualizacji Online
+DRAWGMCFG_ON            = włączone
+DRAWGMCFG_OFF           = wyłączone
+DRAWGMCFG_EXTBOOT       = zewnętrzny EBOOT.BIN
+DRAWGMCFG_BDEMU         = BD Emu
+DRAWGMCFG_EXTHDD0GAME   = Ext /dev_hdd0/game
+DRAWGMCFG_SAVECFG       = Zapisz konfigurację
 
 # DRAW GLOBAL OPTIONS
 DRAWGLOPT_OPTS          = Opcje globalne
 DRAWGLOPT_SCRADJUST     = Regulacja obrazu
 DRAWGLOPT_CHANGEGUI     = Zmiana bierzacego GUI
-DRAWGLOPT_CHANGEBCK     = Zmien kolor tla
+DRAWGLOPT_CHANGEBCK     = Zmień kolor tła
 DRAWGLOPT_CHANGEDIR     = Zmiana katalogu dry
-DRAWGLOPT_SWMUSICOFF    = Wylaczyc muzyke
-DRAWGLOPT_SWMUSICON     = Wlaczyc muzyke.
+DRAWGLOPT_SWMUSICOFF    = Wyłączyć muzykę
+DRAWGLOPT_SWMUSICON     = Włączyć muzykę.
 DRAWGLOPT_INITFTP       = Inicjalizacja serwera FTP
 DRAWGLOPT_TOOLS         = Narzedzia
 DRAWGLOPT_CREDITS       = Kredyty
-DRAWGLOPT_FTPINITED     = inicjalizacja serwera FTP@czy chcesz auto-wlacz usluge FTP na pocz?
-DRAWGLOPT_FTPARINITED   = Serwer FTP juz ma ustawione parametry poczatkowe
-DRAWGLOPT_FTPSTOPED     = Serwer FTP zatrzymany@usunac usluge FTP na pocz.
+DRAWGLOPT_FTPINITED     = icjalizacja serwera FTP@czy chcesz auto-włącz usługę FTP na pocz?
+DRAWGLOPT_FTPARINITED   = Serwer FTP już ma ustawione parametry początkowe
+DRAWGLOPT_FTPSTOPED     = Serwer FTP zatrzymany@usunąć usługę FTP na pocz.
 
 # DRAW TOOLS
 DRAWTOOLS_TOOLS         = Narzędzia
-DRAWTOOLS_DELCACHE      = Delete Cache Tool
-# DRAWTOOLS_SECDISABLE    = Press To Disable Syscall Security
-# DRAWTOOLS_SECENABLE     = Press To Enable Syscall Security
-DRAWTOOLS_PKGTOOLS      = .PKG Install
-DRAWTOOLS_COPYFROM      = Copy from /dev_usb/iris to Iris folder
-DRAWTOOLS_WITHBDVD      = With BDVD Controller
-DRAWTOOLS_NOBDVD        = Without BDVD Controller
-DRAWTOOLS_NOBDVD2       = Disc - Less payload
-DRAWTOOLS_ARCHIVEMAN    = Archive Manager
+DRAWTOOLS_DELCACHE      = Narzedzie do usuwania pamięći podręcznej
+# DRAWTOOLS_SECDISABLE    = Naciśnij klawisz , aby wyłączyć zabezpieczenie syscall
+# DRAWTOOLS_SECENABLE     = Naciśnij klawisz , aby włączyć zabezpieczenie syscall
+DRAWTOOLS_PKGTOOLS      = .PKG Instalacja
+DRAWTOOLS_COPYFROM      = Kopjuj z /dev_usb/iris do folderu Iris
+DRAWTOOLS_WITHBDVD      = BDVD z kontrolerem
+DRAWTOOLS_NOBDVD        = BDVD bez Kontrolera
+DRAWTOOLS_NOBDVD2       = ładowanie bez plyty
+DRAWTOOLS_ARCHIVEMAN    = Menadzer Archiwum
 
 
 # MAIN - OTHERS
-DRAWCACHE_CACHE         = Delete Cache Tool
-DRAWCACHE_ERRNEEDIT     = You need %1.2f GB free to install
-DRAWCACHE_ASKTODEL      = Delete %s Cache?
-PATCHBEMU_ERRNOUSB      = BDEMU is only for USB devices
-MOVEOBEMU_ERRSAVE       = Error Saving:@%s
-MOVEOBEMU_ERRMOVE       = Error Moving To:@%s exists
+DRAWCACHE_CACHE         = Usuń Cache Tool
+DRAWCACHE_ERRNEEDIT     = Potrzebujesz %1.2f GB wolnego do instalacji
+DRAWCACHE_ASKTODEL      = Usuń %s Cache?
+PATCHBEMU_ERRNOUSB      = BDEMU jest tylko dla urzadzen USB
+MOVEOBEMU_ERRSAVE       = Błąd przy zapisywaniu:@%s
+MOVEOBEMU_ERRMOVE       = Błąd Przenoszac Do:@%s istnieje
 MOVEOBEMU_MOUNTOK       = BDEMU mounted in:@%s
-MOVETBEMU_ERRMOVE       = Error Moving To:@%s exists
+MOVETBEMU_ERRMOVE       = Błąd Przenoszac Do:@%s istnieje
 
 # UTILS
 # FAST COPY ADD
-FASTCPADD_FAILED        = Failed in fast_copy_process() ret
-FASTCPADD_ERRTMFILES    = Too much files
-FASTCPADD_FAILEDSTAT    = Failed in stat()
-FASTCPADD_ERROPEN       = Error Opening0 (write)
-FASTCPADD_COPYING       = Copying
-FASTCPADD_FAILFASTFILE  = Failed in fast_files(fast_num_files).mem
+FASTCPADD_FAILED        = Nie udane w fast_copy_process() ret
+FASTCPADD_ERRTMFILES    = Za duzo plikow
+FASTCPADD_FAILEDSTAT    = Nie udane w stat()
+FASTCPADD_ERROPEN       = Błąd przy otwarciu (write)
+FASTCPADD_COPYING       = Kopjuje
+FASTCPADD_FAILFASTFILE  = Nie udane w fast_files(fast_num_files).mem
 
 # FAST COPY PROCESS
-FASTCPPRC_JOINFILE      = Joining file
-FASTCPPRC_COPYFILE      = Copying. File
-FASTCPPTC_OPENERROR     = Error!!!!!!!!!!!!!!!!!!!!!!!!!@Files Opened %i@ Waiting 20 seconds to display fatal error
+FASTCPPRC_JOINFILE      = Łączenie plików
+FASTCPPRC_COPYFILE      = Kopiowanie plików
+FASTCPPTC_OPENERROR     = Błąd!!!!!!!!!!!!!!!!!!!!!!!!!@Pliki Otwarte %i@ czeka 20 sekund, aby wyświetlić błąd krytyczny
 
 # GAME TEST FILES
-GAMETESTS_FOUNDINSTALL  = Found %s@@Want to install?
-GAMETESTS_BIGFILE       = Big file
-GAMETESTS_TESTFILE      = Test File
-GAMETESTS_CHECKSIZE     = Checking Size of File
+GAMETESTS_FOUNDINSTALL  = Znalezione %s@@Czy chcesz zainstalowac?
+GAMETESTS_BIGFILE       = Duzy Plik
+GAMETESTS_TESTFILE      = Sprawdzić Plik
+GAMETESTS_CHECKSIZE     = Sprawdzić rozmiar pliku
 
 # GAME DELETE FILES
-GAMEDELFL_DELETED       = Deleted
-GAMEDELFL_DELETING      = Deleting... File
+GAMEDELFL_DELETED       = Wymazane
+GAMEDELFL_DELETING      = Usuwanie... pliku
 
 # GAME COPY
-GAMECPYSL_GSIZEABCNTASK = Get Size: Aborted - Continue the copy?
+GAMECPYSL_GSIZEABCNTASK = Pobierz rozmiar: Przerwane - Dalej kopiowac?
 GAMECPYSL_STARTED       = Starting... @ copy
-GAMECPYSL_SPLITEDHDDNFO = %s@@Split game copied in HDD0 (non bootable)
-GAMECPYSL_SPLITEDUSBNFO = %s@@Split game copied in USB00%c (non bootable)
-GAMECPYSL_DONE          = Done! Files Copied
-GAMECPYSL_FAILDELDUMP   = Delete failed dump in
+GAMECPYSL_SPLITEDHDDNFO = %s@@Split gra skopiowana na HDD0 (Nie dysk startowy)
+GAMECPYSL_SPLITEDUSBNFO = %s@@Split gra skopiowana na USB00%c (Nie dysk startowy)
+GAMECPYSL_DONE          = Koniec! Pliki zkopiowane
+GAMECPYSL_FAILDELDUMP   = Wymazanie nie udane, wyrzucone w
 
 # GAME CACHE COPY
-GAMECHCPY_ISNEEDONEFILE = Sorry, but you needs to install at least a bigfile
-GAMECHCPY_NEEDMORESPACE = You have %.2fGB free and you needs %.2fGB@@Please, delete Cache Entries
-GAMECHCPY_NOSPACE       = Sorry, you have %.2fGB free@@and you needs %.2fGB
-GAMECHCPY_CACHENFOSTART = Cache Files: %.2fGB - Total Files: %.2fGB@ you save %.2fGB on HDD0 (%.2fGB Total)@@Press any button to Start
-GAMECHCPY_FAILDELFROM   = Delete Cache failed dump from
+GAMECHCPY_ISNEEDONEFILE = Niestety, ale użytkownik musi zainstalować co najmniej bigfile
+GAMECHCPY_NEEDMORESPACE = Ty Masz %.2fGB wolnego miejsca a potrzeba %.2fGB@@Prosze, wymaz Wpisy w pamięci podręcznej
+GAMECHCPY_NOSPACE       = Niestety, masz %.2fGB@@a Ci potrzeba %.2fGB
+GAMECHCPY_CACHENFOSTART = Cache plików: % . 2fGB - liczba plików: %.2fGB@ można zapisać %.2fGB na HDD0 ( %.2fGB)@@naciśnij dowolny przycisk, aby rozpocząć
+GAMECHCPY_FAILDELFROM   = Nie udało się usunąć wyrzucenia z pamięci podręcznej
 
 # GAME DELETE
-GAMEDELSL_WANTDELETE    = Want to delete from
-GAMEDELSL_STARTED       = Starting... @ delete
-GAMEDELSL_DONE          = Done!  Files Deleted
+GAMEDELSL_WANTDELETE    = chcesz usunąć z
+GAMEDELSL_STARTED       = Startuje... @ Usuwanie
+GAMEDELSL_DONE          = Gotowe! Pliki usunięte
 
 # GAME TEST
-GAMETSTSL_FINALNFO      = Directories: %i Files: %i@Big files: %i Split files: %i
-GAMETSTSL_TESTED        = Files Tested
+GAMETSTSL_FINALNFO      = Katalogi: %i plików: %i@dużych plików: %i podzielonych plików: %i
+GAMETSTSL_TESTED        = Pliki Sprawdzone
 
 #GLOBAL UTILS
-GLUTIL_SPLITFILE        = Split file
-GLUTIL_WROTE            = Wrote
-GLUTIL_TIME             = Time
-GLUTIL_TIMELEFT         = Time Left
-GLUTIL_HOLDTRIANGLEAB   = Hold TRIANGLE to Abort
-GLUTIL_HOLDTRIANGLESK   = Hold TRIANGLE to Skip
-GLUTIL_ABORTEDUSER      = Aborted by user
-GLUTIL_ABORTED          = Aborted!!!
-GLUTIL_XEXIT            = Press CROSS to Exit
-GLUTIL_WANTCPYFROM      = Want to copy from
-GLUTIL_WTO              = to
+GLUTIL_SPLITFILE        = Podzielony plik
+GLUTIL_WROTE            = Napisal
+GLUTIL_TIME             = Czas
+GLUTIL_TIMELEFT         = Pozostały czas
+GLUTIL_HOLDTRIANGLEAB   = Przytrzymaj TRÓJKĄT aby przerwac
+GLUTIL_HOLDTRIANGLESK   = Przytrzymaj przycisk trójkąt, aby pominąć 
+GLUTIL_ABORTEDUSER      = Przerwane przez użytkownika
+GLUTIL_ABORTED          = Przerwane!!!
+GLUTIL_XEXIT            = Nacisnąć CROSS aby Zakończyc
+GLUTIL_WANTCPYFROM      = Do skopiowania z
+GLUTIL_WTO              = do
 
 # GLOBAL
-GLOBAL_RETURN           = Return
-GLOBAL_SAVED            = File Saved
+GLOBAL_RETURN           = Powrót
+GLOBAL_SAVED            = Plik Zapisany
 
 # INSTALL .PKG
-PKG_HEADER              = Install .PKG Utility -_____Use CROSS to select and CIRCLE to exit
-PKG_INSERTUSB           = Insert the USB mass storage device
-PKG_ERRTOBIG            = .PKG size too big or disk space small
-PKG_WANTINSTALL         = Want to Install this .PKG file?
-PKG_ERRALREADY          = Error: .PKG already in the stack
-PKG_ERRFULLSTACK        = Error: stack is full (max 16 entries)
-PKG_ERRBUILD            = Error Building .PKG process
-PKG_COPYING             = Copying .PKG file to Iris Manager folder...
-PKG_ERROPENING          = Error Opening .PKG file
-PKG_ERRCREATING         = Error Creating .PKG file
-PKG_ERRREADING          = Error Reading .PKG file
-PKG_ERRLICON            = Error Loading ICON file
-PKG_ERRMOVING           = Error moving .PKG
-
+PKG_HEADER              = Zainstalować .PKG Utility -_____Use CROSS (X) zeby wybierac i CIRCLE (O) aby wyjść
+PKG_INSERTUSB           = Włóż urządzenie pamięci masowej USB
+PKG_ERRTOBIG            = .PKG ma za duży rozmiar lub mała ilość miejsca na dysku
+PKG_WANTINSTALL         = Chcesz zainstalować ten plik .PKG?
+PKG_ERRALREADY          = Błąd: .PKG Już w stosie
+PKG_ERRFULLSTACK        = Błąd: Stos jest pełny (max 16 pozycji)
+PKG_ERRBUILD            = Błąd Budowy procesu .PKG
+PKG_COPYING             = Kopiowanie .PKG file do Iris Manager folder ...
+PKG_ERROPENING          = Błąd Otwarcia pliku .PKG
+PKG_ERRCREATING         = Błąd Tworzenia pliku .pkg
+PKG_ERRREADING          = Błąd Odczytu pliku .PKG
+PKG_ERRLICON            = Błąd Ładowanie pliku IKONY
+PKG_ERRMOVING           = Błąd w przelozeniu .PKG 
 # DRAW_PSX
 DRAWPSX_EMULATOR        = Emulator
-DRAWPSX_VIDEOPS         = PSX Video Options
-DRAWPSX_SAVEASK         = Save PSX options?
-DRAWPSX_SAVED           = PSX Options Saved
-DRAWPSX_VIDEOTHER       = Video / Others
-DRAWPSX_VIDEOMODE       = Video Mode
-DRAWPSX_VIDEOASP        = Video Aspect (480/576)
-DRAWPSX_FULLSC          = Full Screen
-DRAWPSX_SMOOTH          = Smooting
-DRAWPSX_EXTROM          = External ROM
-DRAWPSX_FORMAT          = Format Internal_MC
-DRAWPSX_ASKFORMAT       = Want you format Internal_MC?@@You LOSE the saves in this operation
-DRAWPSX_ERRWRITING      = Error writing the file (Device full?)
-DRAWPSX_BUILDISO        = Building custom ISO...
-DRAWPSX_ASKCHEATS       = PSX Cheat disc found@@Want you use it?
-DRAWPSX_ERRCHEATS       = PSX Disc for Cheats cannot be launched@@without a PSX game
-DRAWPSX_ERRSECSIZE      = Error: Different sector size in ISO files
-DRAWPSX_ERRUNKSIZE      = Error: Unknown Sector Size
-DRAWPSX_DISCEJECT       = PSX CD Ejected
-DRAWPSX_DISCORDER       = Select Disc Order
-DRAWPSX_PRESSOB         = Press CIRCLE to change the order
-DRAWPSX_PRESSXB         = Press CROSS to launch de game
-DRAWPSX_CHEATMAKE       = PSX Cheat disc found, but different sector size@@Want you build one compatible?
-DRAWPSX_COPYMC          = Copying Memory Card to HDD0 device...
-DRAWPSX_ERRCOPYMC       = Error copying the Memory Card to HDD0 device
-DRAWPSX_PUTFNAME        = Put a Folder Name:
-DRAWPSX_FMUSTB          = Folder Name must be >=3 chars
-DRAWPSX_PUTADISC        = Put a PSX disc and press YES to continue or NO to abort@@Disc to copy: 
-DRAWPSX_UNREC           = Unrecognized disc
-DRAWPSX_ERROPENING      = Error opening BDVD drive
-DRAWPSX_ASKEFOLDER      = Folder Exits@@Continue?
-DRAWPSX_ISOEXITS        = exists@@Skip?
+DRAWPSX_VIDEOPS         = PSX opcje wideo
+DRAWPSX_SAVEASK         = Zapisz PSX opcje?
+DRAWPSX_SAVED           = PSX opcje zapisane
+DRAWPSX_VIDEOTHER       = Wideo / Inne
+DRAWPSX_VIDEOMODE       = Tryb wideo
+DRAWPSX_VIDEOASP        = Proporcje obrazu (480/576)
+DRAWPSX_FULLSC          = Pełny ekran
+DRAWPSX_SMOOTH          = Wygładzanie obrazu
+DRAWPSX_EXTROM          = Zewnętrzne PAMIĘCI ROM
+DRAWPSX_FORMAT          = Format wewnętrzny_MC (karty pamieci)
+DRAWPSX_ASKFORMAT       = Ma być to format Internal_MC?@@stracisz zapisane postepy gry w tej operacji
+DRAWPSX_ERRWRITING      = Błąd zapisu pliku (urządzenia pelne?)
+DRAWPSX_BUILDISO        = Opracowywanie niestandardowych ISO...
+DRAWPSX_ASKCHEATS       = PSX cheats Znalezione@@chcesz używac go?
+DRAWPSX_ERRCHEATS       = PSX płyta nie może zostać uruchomiona@@bez gry PSX
+DRAWPSX_ERRSECSIZE      = Błąd: Różne rozmiary sektora w pliku ISO
+DRAWPSX_ERRUNKSIZE      = Błąd: Nieznany rozmiar sektora
+DRAWPSX_DISCEJECT       = PSX CD Wysuniety
+DRAWPSX_DISCORDER       = Wybierz Kolejność dysków
+DRAWPSX_PRESSOB         = Naciśnij przycisk Kółko (O), aby zmienić kolejność
+DRAWPSX_PRESSXB         = Naciśnij przycisk Krzyzyk (X), aby uruchomić grę
+DRAWPSX_CHEATMAKE       = PSX płyta z cheats znaleziona, ale różne wielkości sektora@@prosze zbudować kompatybilne?
+DRAWPSX_COPYMC          = Kopiowanie karty pamięci na urządzenie HDD0...
+DRAWPSX_ERRCOPYMC       = Wystąpił błąd podczas kopiowania na kartę pamięci do urządzenia HDD0
+DRAWPSX_PUTFNAME        = Wprowadzić nazwę folderu:
+DRAWPSX_FMUSTB          = Nazwa folderu musi być >=3 znaków
+DRAWPSX_PUTADISC        = Włóż PSX dysk naciśnij przycisk "Tak" aby kontynuować lub "Nie" aby anulować@@kopiowanie płyt: 
+DRAWPSX_UNREC           = Nieznany dysk
+DRAWPSX_ERROPENING      = BDVD błąd podczas otwierania napędu
+DRAWPSX_ASKEFOLDER      = Folder wyjście@@kontynuować?
+DRAWPSX_ISOEXITS        = Istnieje@@ominać?
        
 # generic
-OUT_OFMEMORY            = Out of Memory
-OPERATION_DONE          = Done!
-PLUG_STORAGE1           = Remember you to plug an USB storage massive device to create the fake disc event
-PLUG_STORAGE2           = Fake Disc Inserted
+OUT_OFMEMORY            = Brak pamięci
+OPERATION_DONE          = Skończone!
+PLUG_STORAGE1           = Należy pamiętać aby podłączyć USB dysk do tworzenia płyty fałszywych zdarzeń
+PLUG_STORAGE2           = Podrobione płyty
